--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en" style="width:100%; height:100%;">
 <head>
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
-  <title>kekayan's Resume</title>
+  <title>Wayne's Resume</title>
 </head>
   <body style="width:100%; height:100%; margin:0;">
     <iframe src="https://docs.google.com/gview?url=https://github.com/zz39/resume/blob/main/Wayne_Zhou_Resume_2023.pdf&embedded=true" style="width:100%; height:100%;" frameborder="0"></iframe>
