--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
-
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
-<html lang="en" style="width:100%; height:100%;">
+<!DOCTYPE html>
+<html>
 <head>
-  <meta http-equiv="content-type" content="text/html; charset=utf-8">
-  <title>Wayne's Resume</title>
+    <meta charset="UTF-8">
+    <title>My Resume/CV</title>
 </head>
-  <body style="width:100%; height:100%; margin:0;">
-    <iframe src="https://docs.google.com/gview?url=https://github.com/zz39/resume/blob/52bbea60ff5aa1983d8061dadaa48e048d56b19a/Wayne_Zhou_Resume_2023.pdf&embedded=true" style="width:100%; height:100%;" frameborder="0"></iframe>
-  </body>
+<body>
+    <object data="https://github.com/zz39/resume/blob/8e33cf63bd709c13975e1ee67004c20feea32431/Wayne_Zhou_Resume_2023.pdf" type="application/pdf" width="100%" height="100%">
+        If you are unable to view the PDF, please download the file.
+    </object>
+</body>
 </html>
