--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>My Resume/CV</title>
 </head>
 <body>
-    <object data="https://github.com/zz39/resume/blob/main/Wayne_Zhou_Resume_2023.pdf" type="application/pdf" width="100%" height="100%">
+    <object data="/Wayne_Zhou_Resume_2023.pdf" type="application/pdf" width="100%" height="100%">
         If you are unable to view the PDF, please download the file.
     </object>
 </body>
