--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
-<html>
-<head>
-    <meta charset="UTF-8">
-    <title>My Resume/CV</title>
-</head>
-<body>
-    <object data="/Wayne_Zhou_Resume_2023.pdf" type="application/pdf" width="100%" height="100%">
-        If you are unable to view the PDF, please download the file.
-    </object>
-</body>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Resume</title>
+  </head>
+  <body>
+    <embed
+      src="https://github.com/zz39/resume/blob/ad9a2fcbb753838fc085c3272277476f70503f4f/Wayne_Zhou_Resume_2023.pdf"
+      type="application/pdf"
+      width="100%"
+      height="100%"
+    />
+  </body>
 </html>
