--- a/index.html
+++ b/index.html
@@ -6,11 +6,6 @@
     <title>Resume</title>
   </head>
   <body>
-    <embed
-      src="https://github.com/zz39/resume/blob/ad9a2fcbb753838fc085c3272277476f70503f4f/Wayne_Zhou_Resume_2023.pdf"
-      type="application/pdf"
-      width="100%"
-      height="100%"
-    />
+      <object data="https://github.com/zz39/resume/blob/c8623cbf81ed3b993fd65ee90d242bc01f93bb9a/Wayne_Zhou_Resume_2023.pdf" width="1000" height="1000" type='application/pdf'/>
   </body>
 </html>
