--- a/index.html
+++ b/index.html
@@ -1,11 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
+    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Resume</title>
+    <title>Resume - Wayne Zhou</title>
+    <style type="text/css">
+      * {
+        border: 0;
+        margin: 0;
+      }
+    </style>
   </head>
   <body>
-      <object data="https://github.com/zz39/resume/blob/c8623cbf81ed3b993fd65ee90d242bc01f93bb9a/Wayne_Zhou_Resume_2023.pdf" width="1000" height="1000" type='application/pdf'/>
+    <div style="height: 100vh">
+      <iframe
+        src="https://github.com/zz39/resume/blob/main/About/Wayne_Zhou_Resume_2023.pdf"
+        width="100%"
+        height="100%"
+      ></iframe>
+    </div>
   </body>
 </html>
