--- a/index.html
+++ b/index.html
@@ -13,12 +13,11 @@
     </style>
   </head>
   <body>
-    <div style="height: 100vh">
-      <iframe
-        src="https://github.com/zz39/resume/blob/main/About/Wayne_Zhou_Resume_2023.pdf"
-        width="100%"
-        height="100%"
-      ></iframe>
-    </div>
+    <object
+      data="https://github.com/zz39/resume/blob/main/About/Wayne_Zhou_Resume_2023.pdf"
+      width="1000"
+      height="1000"
+      type="application/pdf"
+    />
   </body>
 </html>
