--- a/index.html
+++ b/index.html
@@ -1,23 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Resume - Wayne Zhou</title>
-    <style type="text/css">
-      * {
-        border: 0;
-        margin: 0;
-      }
-    </style>
+    <title>resume</title>
   </head>
   <body>
-    <object
-      data="https://github.com/zz39/resume/blob/main/About/Wayne_Zhou_Resume_2023.pdf"
-      width="1000"
-      height="1000"
-      type="application/pdf"
-    />
+    <p>hello world</p>
   </body>
 </html>
