--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>resume</title>
+    <title>Wayne Zhou - Resume/CV</title>
   </head>
   <body>
-    <p>hello world</p>
+    <object
+      data="https://github.com/zz39/resume/blob/7fb365d15a851d7b7f3186c0e42bd7b8a0a9e699/About/Wayne_Zhou_Resume_2023.pdf"
+      type="application/pdf"
+      width="100%"
+      height="100%"
+      alt="resume.pdf"
+    ></object>
   </body>
 </html>
